--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">var billStringElement = document.querySelector(".billString");
+    <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/style.css">
-  </head>
+  </head> 
   <body>
     <div class="container">
       <div class="row">
